Внесение правок по замечаниям наставника

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -37,19 +37,21 @@
                 <img src="http://placehold.it/150x100" width="486" height="524">
                 <ul class="gallery-list">
                     <li class="gallery-item">
-                        <img src="http://placehold.it/150x100" width="166" height="175">
+                        <a href="#"><img src="http://placehold.it/150x100" width="166" height="175"></a>
                     </li>
                     <li class="gallery-item">
-                        <img src="http://placehold.it/150x100" width="166" height="175">
+                        <a href="#"><img src="http://placehold.it/150x100" width="166" height="175"></a>
                     </li>
                     <li class="gallery-item">
-                        <img src="http://placehold.it/150x100" width="166" height="175">
+                        <a href="#"><img src="http://placehold.it/150x100" width="166" height="175"></a>
                     </li>
                 </ul>
             </div>
             <div class="desc">
-                <span class="Avail">Есть в наличии</span>
-                <span class="article">Артикул:DEXTER-AE</span>
+                <div class="avail">
+                    <p class="Avail">Есть в наличии</p>
+                    <p class="article">Артикул:DEXTER-AE</p>
+                </div>
                 <p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожанной сумке находиться все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, улважняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
                 <b>2 900 руб.</b>
                 <a class="btn" href="#">Купить</a>
