Корректировки в catalog.html и catalog-item.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -16,7 +16,7 @@
                         <li><a href="#">Информация</a></li>
                         <li><a href="#">Новости</a></li>
                         <li><a href="#">Прайс-лист</a></li>
-                        <li><a href="#">Магазин</a></li>
+                        <li class="active-link"><a href="#">Магазин</a></li>
                         <li><a href="#">Контакты</a></li>
                     </ul>
                 </nav>
@@ -27,12 +27,12 @@
         </header>
         <main class="container">
             <h1>Набор для путешествий "Baxter of California"</h1>
-            <div class="breadcrumbs">
-                <a href="#">Главная</a>
-                <a href="#">Магазин</a>
-                <a href="#">Средства для ухода</a>
-                <a href="#">Набор для путешествий "Baxter of California"</a>
-            </div>
+            <ul class="breadcrumbs">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Магазин</a></li>
+                <li><a href="#">Средства для ухода</a></li>
+                <li>Набор для путешествий "Baxter of California"</li>
+            </ul>
             <div class="gallery">
                 <img src="http://placehold.it/150x100" width="486" height="524">
                 <ul class="gallery-list">
@@ -49,13 +49,15 @@
             </div>
             <div class="desc">
                 <div class="avail">
-                    <p class="Avail">Есть в наличии</p>
+                    <p class="avail-item">Есть в наличии</p>
                     <p class="article">Артикул:DEXTER-AE</p>
                 </div>
                 <p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожанной сумке находиться все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, улважняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-                <b>2 900 руб.</b>
-                <a class="btn" href="#">Купить</a>
-                <h2>В нябор входят:</h2>                
+                <div class="price-buy">
+                    <p>2 900 руб.</p>
+                    <a class="btn" href="#">Купить</a>
+                </div>
+                <h2>В набор входят:</h2>                
                 <ul class="set-comp">
                     <li>Средство для умывания (50 мл)</li>
                     <li>Увлажняющий крем (50 мл)</li>
