--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
                     <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
                     <h3>Набор для путешествий</h3>
                     <h3 class="text-upper">"BAXTER OF CALIFORNIA"</h3>
-                    <div>
+                    <div class="price-buy">
                         <p>2 900 руб.</p>
                         <a class="btn" href="#">Купить</a>
                     </div>
@@ -66,7 +66,7 @@
                     <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
                     <h3>Увлажняющий кондиционер</h3>
                     <h3 class="text-upper">"BAXTER OF CALIFORNIA"</h3>
-                    <div>
+                    <div class="price-buy">
                         <p>750 руб.</p>
                         <a class="btn" href="#">Купить</a>
                     </div>
@@ -75,7 +75,7 @@
                     <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
                     <h3>Гель для волос</h3>
                     <h3 class="text-upper">"SUAVECITO"</h3>
-                    <div>
+                    <div class="price-buy">
                         <p>290 руб.</p>
                         <a class="btn" href="#">Купить</a>
                     </div>
@@ -84,7 +84,7 @@
                     <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
                     <h3>Глина для укладки волос</h3>
                     <h3 class="text-upper">"AMERICAN CREW"</h3>
-                    <div>
+                    <div class="price-buy">
                         <p>500 руб.</p>
                         <a class="btn" href="#">Купить</a>
                     </div>
@@ -93,7 +93,7 @@
                     <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
                     <h3>Гель для волос</h3>
                     <h3 class="text-upper">"AMERICAN CREW"</h3>
-                    <div>
+                    <div class="price-buy">
                         <p>300 руб.</p>
                         <a class="btn" href="#">Купить</a>
                     </div>
@@ -102,7 +102,7 @@
                     <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
                     <h3>Набор для бритья</h3>
                     <h3 class="text-upper">"BAXTER OF CALIFORNIA"</h3>
-                    <div>
+                    <div class="price-buy">
                         <p>3 900 руб.</p>
                         <a class="btn" href="#">Купить</a>
                     </div>
