Правки картинок и разметки
Названия файлов, фон футера, убран класс b в index, h3 изменил на
p.item-brand, изменил табуляцию.

--- a/catalog.html
+++ b/catalog.html
@@ -1,139 +1,139 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="utf-8">
-        <title>Барбершоп. Средства для ухода</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header class="main-header">
-            <div class="container">
-                <a href="index.html">
-                    <img src="img/Logo.png" alt="Barbershop" width="111" height="24">
-                </a>
-                <nav class="main-navigation">
-                    <ul>
-                        <li><a href="#">Информация</a></li>
-                        <li><a href="#">Новости</a></li>
-                        <li><a href="#">Прайс-лист</a></li>
-                        <li class="active-link"><a href="#">Магазин</a></li>
-                        <li><a href="#">Контакты</a></li>
-                    </ul>
-                </nav>
-                <div class="user-block">
-                    <a class="login" href="#">Войти</a>
-                </div>
-            </div>
-        </header>
-        <main class="container">
-            <h1>Средства для ухода</h1>
-            <ul class="breadcrumbs">
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">Магазин</a></li>
-                <li>Средства для ухода</li>
-            </ul>
-            <div class="select">
-                <form action="#" method="get">
-                    <fieldset>
-                        <legend>Производители:</legend>
-                        <label><input type="checkbox" name="baxter-of-california">Baxter of California</label>
-                        <label><input type="checkbox" name="mr-natty">MR Natty</label>
-                        <label><input type="checkbox" name="suavecito">Suavecito</label>
-                        <label><input type="checkbox" name="malin-goetz">Malin+Goetz</label>
-                        <label><input type="checkbox" name="murrays">Murray's</label>
-                        <label><input type="checkbox" name="american-crew">American Crew</label>
-                    </fieldset>
-                    <fieldset>
-                        <legend>Группы товаров:</legend>
-                        <label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label>
-                        <label><input type="radio" name="question-products" value="care">Средства для ухода</label>
-                        <label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
-                    </fieldset>
-                    <button type="submit">Показать</button>
-                </form>
-            </div>
-            <div class="catalog">
-                <article class="catalog-item">
-                    <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-                    <h3>Набор для путешествий</h3>
-                    <h3 class="text-upper">"BAXTER OF CALIFORNIA"</h3>
-                    <div class="price-buy">
-                        <p>2 900 руб.</p>
-                        <a class="btn" href="#">Купить</a>
-                    </div>
-                </article>
-                <article class="catalog-item">
-                    <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-                    <h3>Увлажняющий кондиционер</h3>
-                    <h3 class="text-upper">"BAXTER OF CALIFORNIA"</h3>
-                    <div class="price-buy">
-                        <p>750 руб.</p>
-                        <a class="btn" href="#">Купить</a>
-                    </div>
-                </article>
-                <article class="catalog-item">
-                    <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-                    <h3>Гель для волос</h3>
-                    <h3 class="text-upper">"SUAVECITO"</h3>
-                    <div class="price-buy">
-                        <p>290 руб.</p>
-                        <a class="btn" href="#">Купить</a>
-                    </div>
-                </article>
-                <article class="catalog-item">
-                    <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-                    <h3>Глина для укладки волос</h3>
-                    <h3 class="text-upper">"AMERICAN CREW"</h3>
-                    <div class="price-buy">
-                        <p>500 руб.</p>
-                        <a class="btn" href="#">Купить</a>
-                    </div>
-                </article>
-                <article class="catalog-item">
-                    <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-                    <h3>Гель для волос</h3>
-                    <h3 class="text-upper">"AMERICAN CREW"</h3>
-                    <div class="price-buy">
-                        <p>300 руб.</p>
-                        <a class="btn" href="#">Купить</a>
-                    </div>
-                </article>
-                <article class="catalog-item">
-                    <a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-                    <h3>Набор для бритья</h3>
-                    <h3 class="text-upper">"BAXTER OF CALIFORNIA"</h3>
-                    <div class="price-buy">
-                        <p>3 900 руб.</p>
-                        <a class="btn" href="#">Купить</a>
-                    </div>
-                </article>
-            </div>
-            <div class="pagination">
-                <a class="btn" href="#" >1</a>
-                <a class="active-btn btn" href="#">2</a>
-                <a class="btn" href="#">3</a>
-                <a class="btn" href="#">4</a>
-            </div>
-        </main>
-        <footer class="main-footer">
-            <div class="container">
-                <section class="footer-contacts">
-                    Барбершоп «Бородинский»<br>
-                    Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                    <a href="#">Как нас найти?</a><br>
-                    Телефон: +7 (812) 666-02-66
-                </section>
-                <section class="footer-social">
-                    <p>Давайте дружить!</p>
-                    <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-                    <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-                    <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-                </section>
-                <section class="footer-copyright">
-                    <p>Разработано:</p>
-                    <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-                </section>
-            </div>
-        </footer>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Барбершоп. Средства для ухода</title>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<header class="main-header">
+			<div class="container">
+				<a href="index.html">
+					<img src="img/Logo.png" alt="Barbershop" width="111" height="24">
+				</a>
+				<nav class="main-navigation">
+					<ul>
+						<li><a href="#">Информация</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Прайс-лист</a></li>
+						<li class="active-link"><a href="#">Магазин</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</nav>
+				<div class="user-block">
+					<a class="login" href="#">Войти</a>
+				</div>
+			</div>
+		</header>
+		<main class="container">
+			<h1>Средства для ухода</h1>
+			<ul class="breadcrumbs">
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">Магазин</a></li>
+				<li>Средства для ухода</li>
+			</ul>
+			<div class="select">
+				<form action="#" method="get">
+					<fieldset>
+						<legend>Производители:</legend>
+						<label><input type="checkbox" name="baxter-of-california">Baxter of California</label>
+						<label><input type="checkbox" name="mr-natty">MR Natty</label>
+						<label><input type="checkbox" name="suavecito">Suavecito</label>
+						<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label>
+						<label><input type="checkbox" name="murrays">Murray's</label>
+						<label><input type="checkbox" name="american-crew">American Crew</label>
+					</fieldset>
+					<fieldset>
+						<legend>Группы товаров:</legend>
+						<label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label>
+						<label><input type="radio" name="question-products" value="care">Средства для ухода</label>
+						<label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
+					</fieldset>
+					<button type="submit">Показать</button>
+				</form>
+			</div>
+			<div class="catalog">
+				<article class="catalog-item">
+					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+					<p>Набор для путешествий</p>
+					<p class="item-brand">"BAXTER OF CALIFORNIA"</p>
+					<div class="price-buy">
+						<p>2 900 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="catalog-item">
+					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+					<p>Увлажняющий кондиционер</p>
+					<p class="item-brand">"BAXTER OF CALIFORNIA"</p>
+					<div class="price-buy">
+						<p>750 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="catalog-item">
+					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+					<p>Гель для волос</p>
+					<p class="item-brand">"SUAVECITO"</p>
+					<div class="price-buy">
+						<p>290 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="catalog-item">
+					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+					<p>Глина для укладки волос</p>
+					<p class="item-brand">"AMERICAN CREW"</p>
+					<div class="price-buy">
+						<p>500 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="catalog-item">
+					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+					<p>Гель для волос</p>
+					<p class="item-brand">"AMERICAN CREW"</p>
+					<div class="price-buy">
+						<p>300 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+				</article>
+				<article class="catalog-item">
+					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+					<p>Набор для бритья</p>
+					<p class="item-brand">"BAXTER OF CALIFORNIA"</p>
+					<div class="price-buy">
+						<p>3 900 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+				</article>
+			</div>
+			<div class="pagination">
+				<a class="btn" href="#" >1</a>
+				<a class="active-btn btn" href="#">2</a>
+				<a class="btn" href="#">3</a>
+				<a class="btn" href="#">4</a>
+			</div>
+		</main>
+		<footer class="main-footer">
+			<div class="container">
+				<section class="footer-contacts">
+					Барбершоп «Бородинский»<br>
+					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+					<a href="#">Как нас найти?</a><br>
+					Телефон: +7 (812) 666-02-66
+				</section>
+				<section class="footer-social">
+					<p>Давайте дружить!</p>
+					<a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+					<a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+					<a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+				</section>
+				<section class="footer-copyright">
+					<p>Разработано:</p>
+					<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+				</section>
+			</div>
+		</footer>
+	</body>
 </html>
