--- a/catalog.html
+++ b/catalog.html
@@ -55,8 +55,8 @@
 			<div class="catalog">
 				<article class="catalog-item">
 					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<p>Набор для путешествий</p>
-					<p class="item-brand">"BAXTER OF CALIFORNIA"</p>
+					<a href="#"><p>Набор для путешествий</p>
+					<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
 					<div class="price-buy">
 						<p>2 900 руб.</p>
 						<a class="btn" href="#">Купить</a>
@@ -64,8 +64,8 @@
 				</article>
 				<article class="catalog-item">
 					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<p>Увлажняющий кондиционер</p>
-					<p class="item-brand">"BAXTER OF CALIFORNIA"</p>
+					<a href="#"><p>Увлажняющий кондиционер</p>
+					<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
 					<div class="price-buy">
 						<p>750 руб.</p>
 						<a class="btn" href="#">Купить</a>
@@ -73,8 +73,8 @@
 				</article>
 				<article class="catalog-item">
 					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<p>Гель для волос</p>
-					<p class="item-brand">"SUAVECITO"</p>
+					<a href="#"><p>Гель для волос</p>
+					<p class="item-brand">"SUAVECITO"</p></a>
 					<div class="price-buy">
 						<p>290 руб.</p>
 						<a class="btn" href="#">Купить</a>
@@ -82,8 +82,8 @@
 				</article>
 				<article class="catalog-item">
 					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<p>Глина для укладки волос</p>
-					<p class="item-brand">"AMERICAN CREW"</p>
+					<a href="#"><p>Глина для укладки волос</p>
+					<p class="item-brand">"AMERICAN CREW"</p></a>
 					<div class="price-buy">
 						<p>500 руб.</p>
 						<a class="btn" href="#">Купить</a>
@@ -91,8 +91,8 @@
 				</article>
 				<article class="catalog-item">
 					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<p>Гель для волос</p>
-					<p class="item-brand">"AMERICAN CREW"</p>
+					<a href="#"><p>Гель для волос</p>
+					<p class="item-brand">"AMERICAN CREW"</p></a>
 					<div class="price-buy">
 						<p>300 руб.</p>
 						<a class="btn" href="#">Купить</a>
@@ -100,8 +100,8 @@
 				</article>
 				<article class="catalog-item">
 					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<p>Набор для бритья</p>
-					<p class="item-brand">"BAXTER OF CALIFORNIA"</p>
+					<a href="#"><p>Набор для бритья</p>
+					<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
 					<div class="price-buy">
 						<p>3 900 руб.</p>
 						<a class="btn" href="#">Купить</a>
@@ -109,10 +109,10 @@
 				</article>
 			</div>
 			<div class="pagination">
-				<a class="btn" href="#" >1</a>
-				<a class="active-btn btn" href="#">2</a>
-				<a class="btn" href="#">3</a>
-				<a class="btn" href="#">4</a>
+				<a class="pagin-btn" href="#" >1</a>
+				<a class="active-btn pagin-btn" href="#">2</a>
+				<a class="pagin-btn" href="#">3</a>
+				<a class="pagin-btn" href="#">4</a>
 			</div>
 		</main>
 		<footer class="main-footer">
