--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<header class="main-header">
-			<div class="container">
-				<a href="index.html">
+			<div class="container clearfix">
+				<a href="index.html" class="logo-block">
 					<img src="img/Logo.png" alt="Barbershop" width="111" height="24">
 				</a>
 				<nav class="main-navigation">
@@ -21,7 +21,7 @@
 					</ul>
 				</nav>
 				<div class="user-block">
-					<a class="login" href="#">Войти</a>
+					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
@@ -33,20 +33,20 @@
 				<li>Средства для ухода</li>
 			</ul>
 			<div class="select">
-				<form action="#" method="get">
+				<form class="care-form" action="#" method="get">
 					<fieldset>
 						<legend>Производители:</legend>
-						<label><input type="checkbox" name="baxter-of-california">Baxter of California</label>
-						<label><input type="checkbox" name="mr-natty">MR Natty</label>
-						<label><input type="checkbox" name="suavecito">Suavecito</label>
-						<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label>
-						<label><input type="checkbox" name="murrays">Murray's</label>
+						<label><input type="checkbox" name="baxter-of-california">Baxter of California</label><br>
+						<label><input type="checkbox" name="mr-natty">MR Natty</label><br>
+						<label><input type="checkbox" name="suavecito">Suavecito</label><br>
+						<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label><br>
+						<label><input type="checkbox" name="murrays">Murray's</label><br>
 						<label><input type="checkbox" name="american-crew">American Crew</label>
 					</fieldset>
 					<fieldset>
 						<legend>Группы товаров:</legend>
-						<label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label>
-						<label><input type="radio" name="question-products" value="care">Средства для ухода</label>
+						<label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label><br>
+						<label><input type="radio" name="question-products" value="care">Средства для ухода</label><br>
 						<label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
 					</fieldset>
 					<button type="submit">Показать</button>
