--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<header class="main-header">
-			<div class="container">
-				<a href="index.html">
+			<div class="container clearfix">
+				<a href="index.html" class="logo-block">
 					<img src="img/Logo.png" alt="Barbershop" width="111" height="24">
 				</a>
 				<nav class="main-navigation">
@@ -21,7 +21,7 @@
 					</ul>
 				</nav>
 				<div class="user-block">
-					<a class="login" href="#">Войти</a>
+					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
