--- a/price.html
+++ b/price.html
@@ -7,8 +7,10 @@
 	</head>
 	<body>
 		<header class="main-header">
-			<div class="container">
-				<a href="index.html"><img src="img/Logo.png" alt="Barbershop" width="111" height="24"></a>
+			<div class="container clearfix">
+				<a href="index.html" class="logo-block">
+					<img src="img/Logo.png" alt="Barbershop" width="111" height="24">
+				</a>
 				<nav class="main-navigation">
 					<ul>
 						<li><a href="#">Информация</a></li>
@@ -19,7 +21,7 @@
 					</ul>
 				</nav>
 				<div class="user-block">
-					<a class="login" href="#">Войти</a>
+					<a class="login" href="#">Вход</a>
 				</div>
 			</div>
 		</header>
