--- a/catalog-item.html
+++ b/catalog-item.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="container">
+		<main class="container clearfix">
 			<h1>Набор для путешествий "Baxter of California"</h1>
 			<ul class="breadcrumbs">
 				<li><a href="#">Главная</a></li>
@@ -34,16 +34,16 @@
 				<li>Набор для путешествий "Baxter of California"</li>
 			</ul>
 			<div class="gallery">
-				<img src="http://placehold.it/150x100" width="486" height="524">
+				<img src="http://placehold.it/150x100" width="460" height="498">
 				<ul class="gallery-list">
 					<li class="gallery-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="166" height="175"></a>
+						<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
 					</li>
 					<li class="gallery-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="166" height="175"></a>
+						<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
 					</li>
 					<li class="gallery-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="166" height="175"></a>
+						<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
 					</li>
 				</ul>
 			</div>
