--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="container">
+		<main class="container clerfix">
 			<h1>Средства для ухода</h1>
 			<ul class="breadcrumbs">
 				<li><a href="#">Главная</a></li>
