--- a/price.html
+++ b/price.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 		</header>
-		<main class="container">
+		<main class="container clearfix">
 			<h1>Прайс-лист</h1>
 			<ul class="breadcrumbs">
 				<li><a href="#">Главная</a></li>
